# src/controllers/feedController.js
@@ -1,17 +1,8 @@
 const db = require("../config/database");
 const RelationController = require("./relationController")
-const getallJournals = async (req, res) => {
-
-    try {
-        const results = await db.execute(`select * from Journal`);
-        res.status(200).json({ Journals: results[0] });
-    } catch (error) {
-        res.status(500).json({ message: error });
-    }
-};
 
 const teacherFeed = async (req, res) => {
-    const { teacher_id } = req.body;
+    const teacher_id = req.id.userId;
 
     const isTeacher = await RelationController.TeacherExists(teacher_id);
     if (!isTeacher) return res.json({ message: "Teacher does not exist" });
@@ -25,9 +16,10 @@ const teacherFeed = async (req, res) => {
 };
 
 const studentFeed = async (req, res) => {
-    const { student_id } = req.body;
+    // const { student_id } = req.body;
+    const student_id = req.id.userId;
     const isStudent = await RelationController.studentexists(student_id);
-    if (!isStudent) return res.json({ message: "Student does not exist" });
+    if (!isStudent) return res.status(500).json({ message: "Student does not exist" });
 
     try {
         const feed = await db.execute(
@@ -38,12 +30,11 @@ const studentFeed = async (req, res) => {
           );
           if(feed[0].length == 0) return res.json({ message: "No Journals published for you" });
         
-        return res.json({ message: feed[0] });
+        return res.status(200).json({ message: feed[0] });
     } catch (err) {
-        return res.json({ Error: err });
+        return res.status(500).json({ Error: err });
     }
 };
 
-exports.getJournals = getallJournals;
 exports.teacherJournals = teacherFeed;
 exports.studentFeed = studentFeed;
